[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Placeholder_Tiles_Objects/2 Background/Layers/2.png" type="Texture" id=1]
[ext_resource path="res://Assets/Menu Assets/menu.png" type="Texture" id=2]
[ext_resource path="res://Assets/Placeholder_Tiles_Objects/2 Background/Layers/1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Menu Assets/Lightmorning.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/TitleMenu.gd" type="Script" id=5]
[ext_resource path="res://Assets/sounds/menu.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/sounds/confirmation_001.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.262745, 0.25098, 0.254902, 0.705882 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Sprite" parent="."]
position = Vector2( 512, 296 )
scale = Vector2( 1.77778, 1.82716 )
texture = ExtResource( 3 )

[node name="2" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 1.77778, 1.85185 )
texture = ExtResource( 1 )

[node name="menu" type="Sprite" parent="."]
position = Vector2( 519.977, 313.5 )
scale = Vector2( 1.72137, 1.72137 )
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 383.977
margin_top = 167.5
margin_right = 658.977
margin_bottom = 215.5
custom_fonts/font = SubResource( 1 )
text = "Jungle ninja"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 407.977
margin_top = 239.5
margin_right = 615.977
margin_bottom = 287.5
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="Panel"]
margin_right = 208.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_hover = Color( 0.239216, 0.235294, 0.235294, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 407.977
margin_top = 303.5
margin_right = 615.977
margin_bottom = 351.5
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelButton" type="Button" parent="Panel2"]
margin_right = 208.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 0.239216, 0.235294, 0.235294, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Level"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
margin_left = 407.977
margin_top = 367.5
margin_right = 615.977
margin_bottom = 415.5
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="Panel3"]
margin_right = 208.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 0.239216, 0.235294, 0.235294, 1 )
text = "Credits"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicTitleScreen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -12.606
autoplay = true

[node name="ConfirmSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="pressed" from="Panel/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Panel2/LevelButton" to="." method="_on_LevelButton_pressed"]
[connection signal="pressed" from="Panel3/CreditsButton" to="." method="_on_CreditsButton_pressed"]
